picture jiggery, map spacing fix

--- a/themes/suheelan/assets/scss/components/_footer.scss
+++ b/themes/suheelan/assets/scss/components/_footer.scss
@@ -76,6 +76,7 @@
              .practices {
                 display: grid;
                 grid-template-columns: 1fr;
+                gap: var(--spacing-2);
 
                 @include for-tablet-landscape-up {
                     grid-template-columns: 1fr 1fr;
